[gd_scene load_steps=57 format=3 uid="uid://csu1x74plq8tn"]

[ext_resource type="Script" path="res://Scripts/lobby.gd" id="1_uq01k"]
[ext_resource type="Texture2D" uid="uid://codbsqumx3p8w" path="res://Assets/lobby.png" id="2_cl2aj"]
[ext_resource type="Texture2D" uid="uid://cxjq7aitcfip7" path="res://Assets/elevatorsclosed.png" id="3_5wmt5"]
[ext_resource type="Texture2D" uid="uid://cusbgno0n5af3" path="res://Assets/elevatorsopen.png" id="4_7kys7"]
[ext_resource type="Texture2D" uid="uid://bk7j67r8fpact" path="res://Assets/elevators3.png" id="5_v1wg4"]
[ext_resource type="Texture2D" uid="uid://bxqxwnqx7iql4" path="res://Assets/elevators2.png" id="6_clvmj"]
[ext_resource type="Texture2D" uid="uid://b5mn71kxnlmmf" path="res://Assets/elevators1.png" id="7_emdts"]
[ext_resource type="Texture2D" uid="uid://cq7tnjaqt23fa" path="res://Assets/mailbox_full.png" id="8_jsvbd"]
[ext_resource type="Script" path="res://Scripts/mom_character.gd" id="8_lw5ux"]
[ext_resource type="AudioStream" uid="uid://b7n8tmlh6xvox" path="res://Audio/elevator-ding-pixabay.mp3" id="8_sepve"]
[ext_resource type="AudioStream" uid="uid://dsdtvrw36yuho" path="res://Audio/button_sound.mp3" id="9_45mia"]
[ext_resource type="Texture2D" uid="uid://dya0wg22o04vc" path="res://Assets/coffeedoorclosed.png" id="9_jme0i"]
[ext_resource type="AudioStream" uid="uid://crgyy1nb8m3ea" path="res://Audio/elevator-sound-pixabay.mp3" id="10_58o1s"]
[ext_resource type="Texture2D" uid="uid://ct0s0dk2usgq3" path="res://Assets/coffeedooropen.png" id="10_g6u1d"]
[ext_resource type="Texture2D" uid="uid://dwcbe3f0dcdgw" path="res://Assets/gymdoorclosed.png" id="11_7v84a"]
[ext_resource type="AudioStream" uid="uid://bmfiibxrhk24q" path="res://Audio/elevator-open-pixabay.mp3" id="11_gkutf"]
[ext_resource type="Texture2D" uid="uid://llsum2rxetbl" path="res://Assets/gymdooropen.png" id="12_8k8l6"]
[ext_resource type="AudioStream" uid="uid://cfstuit2e86dr" path="res://Audio/elevator-close2-pixabay.mp3" id="12_ifx1w"]
[ext_resource type="Script" path="res://Scripts/dad_character.gd" id="14_qn453"]
[ext_resource type="Texture2D" uid="uid://6viey2cvlol3" path="res://Assets/Characters/Mom/Momsprite.png" id="14_yt8xp"]
[ext_resource type="Texture2D" uid="uid://rk8p1o7xixqu" path="res://Assets/Characters/Dad/Dadsprite.png" id="19_fqxde"]
[ext_resource type="AudioStream" uid="uid://cny5784bqyx3v" path="res://Audio/mailbox-freesound-community.mp3" id="25_kfhvr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b2vfb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5wmt5")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7kys7")
}, {
"duration": 1.0,
"texture": ExtResource("5_v1wg4")
}, {
"duration": 1.0,
"texture": ExtResource("6_clvmj")
}, {
"duration": 1.0,
"texture": ExtResource("7_emdts")
}, {
"duration": 1.0,
"texture": ExtResource("3_5wmt5")
}],
"loop": false,
"name": &"closing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7kys7")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5wmt5")
}, {
"duration": 1.0,
"texture": ExtResource("7_emdts")
}, {
"duration": 1.0,
"texture": ExtResource("6_clvmj")
}, {
"duration": 1.0,
"texture": ExtResource("5_v1wg4")
}, {
"duration": 1.0,
"texture": ExtResource("4_7kys7")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_roqu2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ssklh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jme0i")
}],
"loop": true,
"name": &"coffee_door_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_g6u1d")
}],
"loop": true,
"name": &"coffee_door_open",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_kjmc3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_7v84a")
}],
"loop": true,
"name": &"gym_door_closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_8k8l6")
}],
"loop": true,
"name": &"gym_door_open",
"speed": 5.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_h1ihn"]
a = Vector2(0, 1080)
b = Vector2(-1, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lwe12"]
a = Vector2(-1924, 1081)
b = Vector2(-1, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvpuh"]
size = Vector2(71.5, 384)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qw8nb"]
size = Vector2(73, 347)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fssbi"]
size = Vector2(225, 178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6bfs"]
size = Vector2(110, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bee1i"]
size = Vector2(881, 179)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ko13"]
size = Vector2(386, 179.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npbue"]
size = Vector2(65.755, 373.438)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ithdn"]
size = Vector2(65, 358)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsqya"]
size = Vector2(96, 161)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhxx2"]
size = Vector2(99, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydkw2"]
size = Vector2(95.5, 109)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0duss"]
size = Vector2(111, 301)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8vq0"]
size = Vector2(316, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ouk14"]
size = Vector2(316, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8nlp"]
size = Vector2(65.75, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knis6"]
size = Vector2(110, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbty0"]
size = Vector2(39, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k25rn"]
size = Vector2(18, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5eiq"]
size = Vector2(34, 166.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_185a0"]
size = Vector2(397, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7arp"]
size = Vector2(17.5, 71.25)

[sub_resource type="SpriteFrames" id="SpriteFrames_d110g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"idle_quarter_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"idle_quarter_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"walk_quarter_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"walk_quarter_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yt8xp")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhc8l"]
size = Vector2(42, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfsst"]
size = Vector2(42, 26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62pm2"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.721569, 0.721569, 0.721569, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="SpriteFrames" id="SpriteFrames_0mtqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"idle_quarter_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"idle_quarter_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"walk_quarter_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"walk_quarter_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_fqxde")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lruv"]
size = Vector2(42, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q87g0"]
size = Vector2(147.5, 133)

[node name="Lobby" type="Node2D"]
script = ExtResource("1_uq01k")

[node name="LobbyBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_cl2aj")
centered = false

[node name="ElevatorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1375, 92)
sprite_frames = SubResource("SpriteFrames_b2vfb")
animation = &"closed"

[node name="ElevatorButtonSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(1142, 130)
scale = Vector2(3.99998, 4)
texture = SubResource("CanvasTexture_roqu2")

[node name="PlayerMailboxSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(1894.5, 394.5)
texture = ExtResource("8_jsvbd")

[node name="CoffeeShopDoorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(47, 612)
scale = Vector2(0.903846, 1)
sprite_frames = SubResource("SpriteFrames_ssklh")
animation = &"coffee_door_closed"

[node name="GymDoorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1878, 638)
scale = Vector2(0.934783, 1)
sprite_frames = SubResource("SpriteFrames_kjmc3")
animation = &"gym_door_closed"

[node name="BoundaryBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBody2D"]
shape = SubResource("SegmentShape2D_h1ihn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(1922, 0)
shape = SubResource("SegmentShape2D_h1ihn")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(1922, 0)
shape = SubResource("SegmentShape2D_lwe12")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BoundaryBody2D"]
position = Vector2(1923, -979)
shape = SubResource("SegmentShape2D_lwe12")

[node name="WallBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(37.25, 888)
shape = SubResource("RectangleShape2D_kvpuh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(36.5, 353.5)
shape = SubResource("RectangleShape2D_qw8nb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(113.5, 91)
shape = SubResource("RectangleShape2D_fssbi")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(281, 52.5)
shape = SubResource("RectangleShape2D_n6bfs")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(776.5, 90.5)
shape = SubResource("RectangleShape2D_bee1i")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1726, 90.125)
shape = SubResource("RectangleShape2D_2ko13")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1886.88, 367.281)
shape = SubResource("RectangleShape2D_npbue")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="WallBody2D"]
position = Vector2(1886.5, 901)
shape = SubResource("RectangleShape2D_ithdn")

[node name="FurnitureBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(592, 996.5)
shape = SubResource("RectangleShape2D_lsqya")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(1332.5, 999)
shape = SubResource("RectangleShape2D_jhxx2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(849, 494)
shape = SubResource("RectangleShape2D_ydkw2")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(848, 293.5)
shape = SubResource("RectangleShape2D_ydkw2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(567, 493)
shape = SubResource("RectangleShape2D_ydkw2")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(564, 295)
shape = SubResource("RectangleShape2D_ydkw2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="FurnitureBody2D"]
position = Vector2(708.5, 388.5)
shape = SubResource("RectangleShape2D_0duss")

[node name="ElevatorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorArea2D"]
position = Vector2(1375, 63)
shape = SubResource("RectangleShape2D_p8vq0")

[node name="ElevatorBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorBody2D"]
position = Vector2(1375, 90)
shape = SubResource("RectangleShape2D_ouk14")

[node name="ElevatorButtonArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorButtonArea2D"]
position = Vector2(1138, 188.5)
shape = SubResource("RectangleShape2D_k8nlp")

[node name="ElevatorTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StairsArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairsArea2D"]
position = Vector2(281, 119)
shape = SubResource("RectangleShape2D_knis6")

[node name="CoffeeShopArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeShopArea2D"]
position = Vector2(19.5, 611)
shape = SubResource("RectangleShape2D_cbty0")

[node name="CoffeeShopBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeShopBody2D"]
position = Vector2(52, 611)
shape = SubResource("RectangleShape2D_cbty0")

[node name="GymArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GymArea2D"]
position = Vector2(1845, 673.5)
shape = SubResource("RectangleShape2D_k25rn")

[node name="GymArea2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GymArea2D2"]
position = Vector2(1905, 637.75)
shape = SubResource("RectangleShape2D_p5eiq")

[node name="GymBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GymBody2D"]
position = Vector2(1871, 638)
shape = SubResource("RectangleShape2D_p5eiq")

[node name="EntranceArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceArea2D"]
position = Vector2(961.5, 1063.5)
shape = SubResource("RectangleShape2D_185a0")

[node name="MailboxArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MailboxArea2D"]
position = Vector2(1845, 416.375)
shape = SubResource("RectangleShape2D_b7arp")

[node name="MomCharacter" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(900, 850)
collision_layer = 2
collision_mask = 2
script = ExtResource("8_lw5ux")

[node name="MomSprite" type="AnimatedSprite2D" parent="MomCharacter"]
position = Vector2(0, -45)
sprite_frames = SubResource("SpriteFrames_d110g")
animation = &"walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MomCharacter"]
position = Vector2(-3, 19)
shape = SubResource("RectangleShape2D_fhc8l")

[node name="StaticBody2D" type="StaticBody2D" parent="MomCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MomCharacter/StaticBody2D"]
position = Vector2(-3, 19)
shape = SubResource("RectangleShape2D_lfsst")
disabled = true

[node name="DialogueLabel" type="Label" parent="MomCharacter"]
visible = false
offset_left = 48.0
offset_top = -124.0
offset_right = 92.0
offset_bottom = -85.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_62pm2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DadCharacter" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(1000, 850)
collision_layer = 2
collision_mask = 2
script = ExtResource("14_qn453")

[node name="DadSprite" type="AnimatedSprite2D" parent="DadCharacter"]
position = Vector2(0, -45)
sprite_frames = SubResource("SpriteFrames_0mtqd")
animation = &"walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DadCharacter"]
position = Vector2(-3, 19)
shape = SubResource("RectangleShape2D_7lruv")

[node name="StaticBody2D" type="StaticBody2D" parent="DadCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DadCharacter/StaticBody2D"]
position = Vector2(-3, 19)
shape = SubResource("RectangleShape2D_lfsst")
disabled = true

[node name="DialogueLabel" type="Label" parent="DadCharacter"]
visible = false
offset_left = 48.0
offset_top = -127.0
offset_right = 92.0
offset_bottom = -88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_62pm2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElevatorDingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sepve")

[node name="ButtonPressAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_45mia")
volume_db = 1.0
pitch_scale = 0.8

[node name="ElevatorAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_58o1s")

[node name="ElevatorOpenAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_gkutf")
volume_db = -4.0

[node name="ElevatorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ifx1w")

[node name="MailboxAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_kfhvr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
offset_left = 1175.0
offset_top = 935.0
offset_right = 1289.0
offset_bottom = 1071.0

[node name="ClassButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Go to Class"

[node name="WorkButton1" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Work 2 Hours"

[node name="WorkButton2" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Work 4 Hours"

[node name="WorkButton3" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Work 6 Hours"

[node name="TestArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea2D"]
position = Vector2(1478, 998)
shape = SubResource("RectangleShape2D_q87g0")

[connection signal="animation_finished" from="ElevatorSprite" to="." method="_on_elevator_sprite_animation_finished"]
[connection signal="body_entered" from="ElevatorArea2D" to="." method="_on_elevator_area_2d_body_entered"]
[connection signal="body_entered" from="ElevatorButtonArea2D" to="." method="_on_elevator_button_area_2d_body_entered"]
[connection signal="body_exited" from="ElevatorButtonArea2D" to="." method="_on_elevator_button_area_2d_body_exited"]
[connection signal="timeout" from="ElevatorTimer" to="." method="_on_elevator_timer_timeout"]
[connection signal="body_entered" from="StairsArea2D" to="." method="_on_stairs_area_2d_body_entered"]
[connection signal="body_entered" from="CoffeeShopArea2D" to="." method="_on_coffee_shop_area_2d_body_entered"]
[connection signal="body_entered" from="GymArea2D" to="." method="_on_gym_area_2d_body_entered"]
[connection signal="body_exited" from="GymArea2D" to="." method="_on_gym_area_2d_body_exited"]
[connection signal="body_entered" from="GymArea2D2" to="." method="_on_gym_area_2d_2_body_entered"]
[connection signal="body_entered" from="EntranceArea2D" to="." method="_on_entrance_area_2d_body_entered"]
[connection signal="body_exited" from="EntranceArea2D" to="." method="_on_entrance_area_2d_body_exited"]
[connection signal="body_entered" from="MailboxArea2D" to="." method="_on_mailbox_area_2d_body_entered"]
[connection signal="body_exited" from="MailboxArea2D" to="." method="_on_mailbox_area_2d_body_exited"]
[connection signal="pressed" from="VBoxContainer/ClassButton" to="." method="_on_class_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WorkButton1" to="." method="_on_work_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/WorkButton2" to="." method="_on_work_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/WorkButton3" to="." method="_on_work_button_3_pressed"]
[connection signal="body_entered" from="TestArea2D" to="." method="_on_test_area_2d_body_entered"]
